--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
+    "buffer": "^6.0.3",
     "concurrently": "^9.1.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
@@ -32,6 +33,7 @@
     "globals": "^15.11.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "postcss": "^8.4.49",
     "sqlite3": "^5.1.7",
     "tailwindcss": "^3.4.15",
